crates/id_effect/tests/ui/invalid_provides.rs
#[derive(::id_effect::ProviderSpecDerive)]
struct BadLive;

impl BadLive {
  fn new() -> u32 {
    1
  }
}

fn main() {}
